syntax = "proto3";

package velez_api;

import "npm.proto";
import "google/api/annotations.proto";

option go_package = "go.vervstack.ru/velez/pkg/velez_api;velez_api";
option (npm_package) = "@vervstack/velez";

// Verv Closed Network
service VcnApi {
  rpc CreateNamespace(CreateVcnNamespace.Request) returns (CreateVcnNamespace.Response) {
    option (google.api.http) = {
      post: "/api/vcn/namespaces/new",
      body: "*",
    };
  };

  rpc ListNamespaces(ListVcnNamespaces.Request) returns (ListVcnNamespaces.Response) {
    option (google.api.http) = {
      post: "/api/vcn/namespaces/list",
      body: "*",
    };
  };

  rpc ConnectService(ConnectService.Request) returns (ConnectService.Response) {
    option (google.api.http) = {
      post: "/api/vcn/services/connect",
      body: "*",
    };
  }

  rpc ConnectUser(ConnectUser.Request) returns (ConnectUser.Response) {
    option (google.api.http) = {
      post: "/api/vcn/users/connect",
      body: "*",
    };
  }


  //  Not implemented
  rpc DeleteNamespace(DeleteVcnNamespace.Request) returns (DeleteVcnNamespace.Response) {
    option (google.api.http) = {
      post: "/api/vcn/namespaces/delete",
      body: "*",
    };
  };
}

message CreateVcnNamespace {
  message Request {
    string name = 1;
  }
  message Response {
    Namespace namespace = 1;
  }
}

message ListVcnNamespaces {
  message Request {

  }
  message Response {
    repeated Namespace namespaces = 1;
  }
}

message DeleteVcnNamespace {
  message Request {
    string id = 1;
  }
  message Response {}
}

message ConnectService {
  message Request {
    string service_name = 1;
    // not implemented
    optional string domain_name = 2;
  }
  message Response {}
}

message Namespace {
  string id = 1;
  string name = 2;
}

message ConnectUser {
  message Request {
    string key = 1;
    string username = 2;
  }

  message Response {}
}